add cart, small fix iconic fonts and classes

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -23,7 +23,7 @@
         <div class="product__block-rating-and-price">
           <div class="product__rating">
             <div class="product__rating-count">1.23</div>
-            <i class="icon icon-star"></i>
+            <i class="icon-star"></i>
           </div>
           <div class="product__price">15999</div>
         </div>
