--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -12,17 +12,17 @@
 <body>
   <div class="wrapper">
     <div class="double-slider">
-      <i class="icon icon-slider-left"></i>
+      <i class="icon-slider-left"></i>
 
-      <div class="line"></div>
+      <div class="double-slider__line"></div>
 
-      <i class="icon icon-slider-right"></i>
+      <i class="icon-slider-right"></i>
     </div>
-    <div class="price-range">
+    <div class="double-slider__price-range">
       <span>0 UAH</span>
 
       <span>85000 UAH</span>
-    </div>
+  </div>
   </div>
 </body>
 </html>
