--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -5,7 +5,7 @@
   <title>HTML/CSS Pagination component</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../../../fonts.css">
 
   <style>
     .wrapper {
@@ -19,7 +19,7 @@
   <div class="wrapper">
     <div class="pagination">
         <div class="pagination__page-link">
-          <i class="bi bi-chevron-left"></i>
+          <i class="pagination__back icon-arrow-left"></i>
         </div>
 
         <ul class="pagination__page-list">
@@ -38,7 +38,7 @@
         </ul>
 
         <div class="pagination__page-link">
-          <i class="bi bi-chevron-right"></i>
+          <i class="pagination__forward icon-arrow-right"></i>
         </div>
     </div>
   </div>
