--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -10,22 +10,25 @@
 </head>
 <body>
   <div class="wrapper">
-    <h3 class="form-title">Category</h3>
-    <label for="check1">
+    <div class="filters-list">
+      <h3 class="form-title">Category</h3>
+
+      <label for="check1">
         <div class="filter">
           <input type="checkbox" id="check1" class="check">
 
           <span>Cell phones</span>
+        </div>
       </label>
-    </div>
 
-    <label for="check2">
+      <label for="check2">
         <div class="filter">
           <input type="checkbox" id="check2" class="check">
 
           <span>Computers & Tables</span>
+        </div>
       </label>
-    </div>
+   </div>
   </div>
 </body>
 </html>
