added in grid card-element

--- a/components/grid-loyaut/index.html
+++ b/components/grid-loyaut/index.html
@@ -20,7 +20,44 @@
       <div class="col-s-12 col-m-8 col-l-9">
         right side
         <div class="row">
-          <div class="col-s-12 col-m-6 col-l-4">card1</div>
+          <div class="col-s-12 col-m-6 col-l-4">
+            <main>
+              <div class="wrapper">
+                <!-- Card component -->
+                <div class="card-component">
+                  <div class="card-component__conteiner">
+                    <div class="card-component__column">
+                      <div class="card-component__image">
+                        <img src="../card/images/Rectangle.png" alt="">
+                      </div>
+                      <div class="card-component__block-price block-price">
+                        <div class="block-price__star">
+                          <button class="button-star">
+                            <span>1.23</span>
+                            <span><img class="img-star" src="../card/images/Star1.png" alt=""></span>
+                          </button>
+                        </div>
+                        <div class="block-price__price">
+                          <span>15999</span>
+                        </div>
+                      </div>
+                      <div class="card-component__description description">
+                        <div class="description__characteristics">
+                          <span>Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</span>
+                        </div>
+                        <div class="description__type">
+                          <span>Laptops</span>
+                        </div>
+                      </div>
+                      <div class="card-component__button-card">
+                        <button class="button-card">add to card</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </main>
+          </div>
           <div class="col-s-12 col-m-6 col-l-4">card2</div>
           <div class="col-s-12 col-m-6 col-l-4">card3</div>
           <div class="col-s-12 col-m-6 col-l-4">card4</div>
