--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,97 @@
 /* put your styles in this file */
 /*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+#root {
+  width: 1070px;
+  height: 710px;
+  padding: 40px;
+  margin: 0 auto;
+  background-color: #aed8e6;
+}
+
+.container {
+  margin: 0 auto;
+}
+
+.cart-item {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 970px;
+  max-height: 70px;
+  background-color: #fff;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  border-radius: 3px;
+  padding: 15px 0;
+  margin: 0 10px;
+}
+
+.cart-item__list {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 50px;
+  margin-bottom: 25px;
+  /* background-color: #fefefe; */
+}
+
+.cart-item__title {
+  max-width: 250px;
+  overflow: hidden;
+}
+
+.cart-item__quantity {
+  display: flex;
+  gap: 10px;
+
+}
+
+.cart-item__btn {
+  background-color: #fff;
+  border: none;
+  width: 16px;
+  height: 16px;
+}
+
+.cart-total {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.cart-action {
+  display: flex;
+  justify-content: center;
+}
+
+.cart-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6f64f8;
+  color: #fff;
+  padding: 14px;
+  width: 200px;
+  height: 28px;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 3px;
+}
+
+.cart-item__btn,
+.cart-btn {
+  cursor: pointer;
+}
