--- a/src/Components/Main/LeftSide.css
+++ b/src/Components/Main/LeftSide.css
@@ -5,6 +5,23 @@
     padding: 0 20px;
 }
 
+.brands_categories p{
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 18px;
+}
+
+.brands_categories {
+    padding-top: 30px;
+}
+
+.under_line_decorate {
+    width: 100%;
+    height: 1px;
+    background-color: #2c2c2c;
+    margin-top: 30px;
+}
+
 @media (max-width: 768px) {
     .left-side {
         display: none;
