--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Pagination component</title>
-  <link rel="stylesheet" href="style.css">
 
-  <style>
-    .wrapper {
-      width: 800px;
-      margin: 100px auto;
-    }
-  </style>
+<head>
+	<meta charset="UTF-8" />
+	<title>Pagination component</title>
+	<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<main>
-  <div class="wrapper">
-    <!-- Pagination component -->
-  </div>
-</main>
+	<main>
+		<div class="wrapper">
+			<div class="pagination">
+				<div class="bi bi-chevron-left pagination-btn"></div>
+				<div class="pagination-nav">
+					<a class="pagination-btn" href="#">1</a>
+					<a class="pagination-btn" href="#">2</a>
+					<a class="pagination-btn" href="#">3</a>
+					<a class="pagination-btn" href="#">4</a>
+					<a class="pagination-btn" href="#">5</a>
+					<a class="pagination-btn" href="#">6</a>
+					<a class="pagination-btn" href="#">7</a>
+					<a class="pagination-btn" href="#">8</a>
+					<a class="pagination-btn" href="#">9</a>
+					<a class="pagination-btn" href="#">10</a>
+					<a class="pagination-btn" href="#">11</a>
+					<a class="pagination-btn" href="#">12</a>
+				</div>
+				<div class="bi bi-chevron-right pagination-btn"></div>
+			</div>
+		</div>
+	</main>
 </body>
+
 </html>
