--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+body {
+	margin: 0 auto;
+	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
+}
+
+a {
+	text-decoration: none;
+}
+
+.wrapper {
+	width: 800px;
+}
+
+.pagination {
+	width: 75%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.pagination-nav {
+	width: 80%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	list-style: none;
+}
+
+.pagination-btn {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	background-color: #EDEDED;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 15px;
+	color: #2C2C2C;
+	
+}
+
+.pagination-btn:hover {
+	transition: 0.5s;
+	background-color: #7E72F2;
+	cursor: pointer;
+	
+}
+
+
+
