--- a/src/components/double-slider/01-css-task/style.css
+++ b/src/components/double-slider/01-css-task/style.css
@@ -1,1 +1,85 @@
 /* put your styles in this file */
+.wrapper {
+  background-color: #ffefd6;
+}
+
+.range-slider__inner {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  margin: 10px 14px;
+  margin-top: 50px;
+  background: #cfebfc;
+  box-shadow: 0 0 1px #c2cfe0;
+  user-select: none;
+}
+
+.range-slider__thumb-right,
+.range-slider__thumb-left {
+  position: absolute;
+  top: 50%;
+  margin-top: -9px;
+  height: 18px;
+  width: 6px;
+  background: url("./icons/range-thumb-icon.svg") left center no-repeat;
+  background-size: cover;
+  cursor: grab;
+}
+
+/* cursor over all slider, so that if the cursor moves out of the thumb, it's still grabbing */
+.range-slider_dragging,
+.range-slider_dragging .range-slider__thumb-right,
+.range-slider_dragging .range-slider__thumb-left {
+  cursor: grabbing;
+}
+
+.range-slider__thumb-left {
+  left: 0;
+  margin-left: -6px;
+}
+
+.range-slider__thumb-right {
+  right: 0;
+  transform: rotate(180deg);
+  margin-right: -6px;
+}
+
+.range-slider__progress {
+  background: #8477f1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.range-slider {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 60px;
+}
+
+.range-slider > span {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #000;
+  width: 60px;
+  text-align: right;
+}
+
+.range-slider > span:first-of-type {
+  position: absolute;
+  top: 100%;
+  left: 6%;
+}
+
+.range-slider > span:last-of-type {
+  position: absolute;
+  top: 100%;
+  right: 15%;
+}
