added side-bar component css-task

--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -1,5 +1,5 @@
 /* put your styles in this file */
-/*----- Custom checkbox/radio classes -----*/
+/*----- Custom checkbox -----*/
 
 .custom-checkbox {
   position: absolute;
