--- a/src/components/double-slider/01-css-task/style.css
+++ b/src/components/double-slider/01-css-task/style.css
@@ -3,16 +3,34 @@
   background-color: #ffefd6;
 }
 
+.range-slider {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* padding: 0;
+  margin-bottom: 50px; */
+}
+
 .range-slider__inner {
   position: relative;
-  display: inline-block;
   width: 100%;
   height: 4px;
   margin: 10px 14px;
-  margin-top: 50px;
   background: #cfebfc;
   box-shadow: 0 0 1px #c2cfe0;
   user-select: none;
+  margin-top: 50px;
+}
+
+.range-slider__progress {
+  background: #8477f1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
 }
 
 .range-slider__thumb-right,
@@ -45,41 +63,22 @@
   margin-right: -6px;
 }
 
-.range-slider__progress {
-  background: #8477f1;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-}
-
-.range-slider {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0 60px;
-}
-
 .range-slider > span {
   font-weight: 700;
   font-size: 16px;
   line-height: 24px;
   color: #000;
-  width: 60px;
   text-align: right;
 }
 
 .range-slider > span:first-of-type {
   position: absolute;
   top: 100%;
-  left: 6%;
+  left: 0;
 }
 
 .range-slider > span:last-of-type {
   position: absolute;
   top: 100%;
-  right: 15%;
+  right: 0;
 }
