--- a/src/components/side-bar/01-css-task/style.css
+++ b/src/components/side-bar/01-css-task/style.css
@@ -1,1 +1,214 @@
 /* put your styles in this file */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #fff;
+  font-family: "Montserat", sans-serif;
+}
+
+ul > li {
+  list-style: none;
+}
+
+.wrapper {
+  background-color: #aed8e6;
+}
+
+/* range-slider */
+
+.range-slider {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  margin-bottom: 50px;
+}
+
+.range-slider__inner {
+  position: relative;
+  width: 100%;
+  height: 4px;
+  margin: 10px 14px;
+  background: #cfebfc;
+  box-shadow: 0 0 1px #c2cfe0;
+  user-select: none;
+}
+
+.range-slider__progress {
+  background: #8477f1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.range-slider__thumb-right,
+.range-slider__thumb-left {
+  position: absolute;
+  top: 50%;
+  margin-top: -9px;
+  height: 18px;
+  width: 6px;
+  background: url("./icons/range-thumb-icon.svg") left center no-repeat;
+  background-size: cover;
+  cursor: grab;
+}
+
+/* cursor over all slider, so that if the cursor moves out of the thumb, it's still grabbing */
+.range-slider_dragging,
+.range-slider_dragging .range-slider__thumb-right,
+.range-slider_dragging .range-slider__thumb-left {
+  cursor: grabbing;
+}
+
+.range-slider__thumb-left {
+  left: 0;
+  margin-left: -6px;
+}
+
+.range-slider__thumb-right {
+  right: 0;
+  transform: rotate(180deg);
+  margin-right: -6px;
+}
+
+.range-slider > span {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #000;
+  text-align: right;
+}
+
+.range-slider > span:first-of-type {
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+
+.range-slider > span:last-of-type {
+  position: absolute;
+  top: 100%;
+  right: 0;
+}
+
+/*----- Custom checkbox -----*/
+
+.custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.custom-checkbox + label {
+  display: inline-flex;
+  align-items: center;
+  user-select: none;
+  width: 100%;
+}
+
+.custom-checkbox + label::before {
+  content: "";
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #999;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.custom-checkbox + label::before {
+  border-radius: 0.25em;
+}
+
+.custom-checkbox:checked + label::before {
+  background-color: #6f64f8;
+}
+
+.custom-checkbox:not(:disabled):not(:checked) + label:hover::before,
+.custom-checkbox:not(:disabled):active + label::before {
+  border-color: #958ef7;
+}
+
+.custom-checkbox:focus + label::before {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.custom-checkbox:focus:not(:checked) + label::before {
+  border-color: #9380ff;
+}
+
+.custom-checkbox:disabled + label::before {
+  background-color: #e9ecef;
+}
+
+/* filters */
+
+.filters {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.filters__card {
+  padding: 20px 42px 20px 42px;
+  margin: 28px 0;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  flex-grow: 1;
+}
+
+.filters__divider {
+  margin: 28px 0;
+  height: 1px;
+  background-color: rgba(0, 0, 0, 0.15);
+  border: none;
+}
+
+.filters__title {
+  font-weight: 600;
+  font-size: 18px;
+  margin-bottom: 22px;
+}
+
+.filters__card > section,
+.filters__divider {
+  max-width: 100%;
+}
+
+.filters__list li:not(li:first-child):not(li:last-child) {
+  padding: 10px 0;
+}
+
+.filters__list li:first-child {
+  padding-bottom: 10px;
+}
+
+.filters__list li:last-child {
+  padding-top: 10px;
+}
+
+.filters__clear-all {
+  width: 100%;
+  font-size: 18px;
+  padding: 17px;
+  text-transform: uppercase;
+  background-color: #6f64f8;
+  color: #fff;
+  border-radius: 8px;
+  border: none;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
