card, card-list and cart components

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Card component</title>
+  <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <main>
-    <div class="wrapper">
-      <img class="product-image" src="../../product-images/image_2022-04-18_14-22-40.png" alt="laptop">
+    <div class="product-card">
+      <img class="product-image" src="../../../product-images/image_2022-04-18_14-22-40.png" alt="laptop">
       <div class="product-rating-and-price">
         <div class="product-rating">
           <span class="product-rating-number">1.23</span>
