--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -1,1 +1,100 @@
-/* put your styles in this file */
+* {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.product-card {
+  height: 394px;
+  width: 317px;
+  border-radius: 8px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+}
+
+.product-image {
+  width: 293px;
+  height: 200px;
+  margin-top: 12px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.product-rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  box-sizing: border-box;
+  margin-top: 20px;
+  padding: 5px;
+  width: 70px;
+  height: 27px;
+  background-color: #7E72F2;
+  border-radius: 3px;
+  color: white;
+  font-size: 13px;
+  line-height: 14px;
+}
+
+.product-price {
+  display: flex;
+  width: 43px;
+  height: 18px;
+  font-size: 15px;
+  line-height: 18px;
+  margin-top: 23px;
+}
+
+.product-rating-and-price {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.product-description {
+  display: inline-block;
+  width: 261px;
+  height: 32px;
+  font-size: 13px;
+  line-height: 16px;
+  margin-left: 24px;
+  margin-right: 32px;
+  margin-bottom: 10px;
+}
+
+.product-category {
+  display: inline-block;
+  margin-left: 24px;
+  margin-bottom: 16px;
+  width: 39px;
+  height: 12px;
+  font-size: 10px;
+  line-height: 12px;
+}
+
+.add-to-cart-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 317px;
+  height: 40px;
+  background-color: #7E72F2;
+  border-radius: 0px 0px 5px 5px;
+  border: none;
+}
+
+.cart-button-text {
+  width: 86px;
+  height: 13px;
+  font-size: 12px;
+  line-height: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.add-to-cart-btn:hover {
+  background-color: hsla(246, 100%, 70%, 1);
+}
