--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -1,1 +1,381 @@
-/* put your styles in this file */
+* {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 30px;
+}
+
+.product-card-list{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.product-card {
+  height: 394px;
+  width: 317px;
+  border-radius: 8px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  margin: 10px;
+}
+
+.product-image {
+  width: 293px;
+  height: 200px;
+  margin-top: 12px;
+  margin-left: 12px;
+  margin-right: 12px;
+}
+
+.product-rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  box-sizing: border-box;
+  margin-top: 20px;
+  padding: 5px;
+  width: 70px;
+  height: 27px;
+  background-color: #7E72F2;
+  border-radius: 3px;
+  color: white;
+  font-size: 13px;
+  line-height: 14px;
+}
+
+.product-price {
+  display: flex;
+  width: 43px;
+  height: 18px;
+  font-size: 15px;
+  line-height: 18px;
+  margin-top: 23px;
+}
+
+.product-rating-and-price {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
+
+.product-description {
+  display: inline-block;
+  width: 261px;
+  height: 32px;
+  font-size: 13px;
+  line-height: 16px;
+  margin-left: 24px;
+  margin-right: 32px;
+  margin-bottom: 10px;
+}
+
+.product-category {
+  display: inline-block;
+  margin-left: 24px;
+  margin-bottom: 16px;
+  width: 39px;
+  height: 12px;
+  font-size: 10px;
+  line-height: 12px;
+}
+
+.add-to-cart-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 317px;
+  height: 40px;
+  background-color: #7E72F2;
+  border-radius: 0px 0px 5px 5px;
+  border: none;
+}
+
+.cart-button-text {
+  width: 86px;
+  height: 13px;
+  font-size: 12px;
+  line-height: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.add-to-cart-btn:hover {
+  background-color: hsla(246, 100%, 70%, 1);
+}
+
+.col-1 {
+  width: calc(100% / 12);
+}
+
+.col-2 {
+  width: calc(100% / 12 * 2);
+}
+
+.col-3 {
+  width: calc(100% / 12 * 3);
+}
+
+.col-4 {
+  width: calc(100% / 12 * 4);
+}
+
+.col-5 {
+  width: calc(100% / 12 * 5);
+}
+
+.col-6 {
+  width: calc(100% / 12 * 6);
+}
+
+.col-7 {
+  width: calc(100% / 12 * 7);
+}
+
+.col-8 {
+  width: calc(100% / 12 * 8);
+}
+
+.col-9 {
+  width: calc(100% / 12 * 9);
+}
+
+.col-10 {
+  width: calc(100% / 12 * 10);
+}
+
+.col-11 {
+  width: calc(100% / 12 * 11);
+}
+
+.col-12 {
+  width: calc(100% / 12 * 12);
+}
+
+/* s */
+@media (max-width: 576px) {
+
+  .left-side {
+    display: none;
+  }
+
+  .col-s-1 {
+    width: calc(100% / 12);
+  }
+
+  .col-s-2 {
+    width: calc(100% / 12 * 2);
+  }
+
+  .col-s-3 {
+    width: calc(100% / 12 * 3);
+  }
+
+  .col-s-4 {
+    width: calc(100% / 12 * 4);
+  }
+
+  .col-s-5 {
+    width: calc(100% / 12 * 5);
+  }
+
+  .col-s-6 {
+    width: calc(100% / 12 * 6);
+  }
+
+  .col-s-7 {
+    width: calc(100% / 12 * 7);
+  }
+
+  .col-s-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-s-9 {
+    width: calc(100% / 12 * 9);
+  }
+
+  .col-s-10 {
+    width: calc(100% / 12 * 10);
+  }
+
+  .col-s-11 {
+    width: calc(100% / 12 * 11);
+  }
+
+  .col-s-12 {
+    width: calc(100% / 12 * 12);
+  }
+}
+
+
+/* m */
+@media (min-width: 577px) and (max-width: 767px) {
+
+  .left-side {
+    display: none;
+  }
+
+  .col-m-1 {
+    width: calc(100% / 12);
+  }
+
+  .col-m-2 {
+    width: calc(100% / 12 * 2);
+  }
+
+  .col-m-3 {
+    width: calc(100% / 12 * 3);
+  }
+
+  .col-m-4 {
+    width: calc(100% / 12 * 4);
+  }
+
+  .col-m-5 {
+    width: calc(100% / 12 * 5);
+  }
+
+  .col-m-6 {
+    width: calc(100% / 12 * 6);
+  }
+
+  .col-m-7 {
+    width: calc(100% / 12 * 7);
+  }
+
+  .col-m-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-m-9 {
+    width: calc(100% / 12 * 9);
+  }
+
+  .col-m-10 {
+    width: calc(100% / 12 * 10);
+  }
+
+  .col-m-11 {
+    width: calc(100% / 12 * 11);
+  }
+
+  .col-m-12 {
+    width: calc(100% / 12 * 12);
+  }
+}
+
+/* l */
+@media (min-width: 768px) {
+  .col-l-1 {
+    width: calc(100% / 12);
+  }
+
+  .col-l-2 {
+    width: calc(100% / 12 * 2);
+  }
+
+  .col-l-3 {
+    width: calc(100% / 12 * 3);
+  }
+
+  .col-l-4 {
+    width: calc(100% / 12 * 4);
+  }
+
+  .col-l-5 {
+    width: calc(100% / 12 * 5);
+  }
+
+  .col-l-6 {
+    width: calc(100% / 12 * 6);
+  }
+
+  .col-l-7 {
+    width: calc(100% / 12 * 7);
+  }
+
+  .col-l-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-l-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-l-9 {
+    width: calc(100% / 12 * 9);
+  }
+
+  .col-l-10 {
+    width: calc(100% / 12 * 10);
+  }
+
+  .col-l-11 {
+    width: calc(100% / 12 * 11);
+  }
+
+  .col-l-12 {
+    width: calc(100% / 12 * 12);
+  }
+}
+
+/* xl */
+@media (min-width: 992px) {
+  .col-xl-1 {
+    width: calc(100% / 12);
+  }
+
+  .col-xl-2 {
+    width: calc(100% / 12 * 2);
+  }
+
+  .col-xl-3 {
+    width: calc(100% / 12 * 3);
+  }
+
+  .col-xl-4 {
+    width: calc(100% / 12 * 4);
+  }
+
+  .col-xl-5 {
+    width: calc(100% / 12 * 5);
+  }
+
+  .col-xl-6 {
+    width: calc(100% / 12 * 6);
+  }
+
+  .col-xl-7 {
+    width: calc(100% / 12 * 7);
+  }
+
+  .col-xl-8 {
+    width: calc(100% / 12 * 8);
+  }
+
+  .col-xl-9 {
+    width: calc(100% / 12 * 9);
+  }
+
+  .col-xl-10 {
+    width: calc(100% / 12 * 10);
+  }
+
+  .col-xl-11 {
+    width: calc(100% / 12 * 11);
+  }
+
+  .col-xl-12 {
+    width: calc(100% / 12 * 12);
+  }
+}
