--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -8,7 +8,28 @@
 <body>
 <main>
   <div id="root">
-    <!-- Cart component -->
+    <div class="cart-container">
+      <ul class="cart-list">
+        <li class="cart-product">
+          <div class="product-preview"></div>
+          <div class="product-description"></div>
+          <div class="product-counter">
+            <button class="plus-circle"></button>
+            <button class="plus-circle"></button>
+          </div>
+          <div class="product-price"></div>
+        </li>
+        <li class="cart-product"></li>
+        <li class="cart-product"></li>
+        <li class="cart-product"></li>
+      </ul>
+      <div class="footer">
+        <div class="cart-total">
+          <span>Total: </span>
+        </div>
+        <button class="order-button">ORDER</button>
+      </div>
+    </div>
   </div>
 </main>
 </body>
