--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,18 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-body {
-	margin:100 auto;
-	box-sizing: border-box;
-	font-family: 'Montserrat', sans-serif;
-}
-
-a {
-	text-decoration: none;
-}
-
 .wrapper {
 	width: 800px;
+	margin: o auto;
 }
 
 .pagination {
@@ -28,7 +19,6 @@ a {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	list-style: none;
 }
 
 .pagination-btn {
@@ -48,7 +38,7 @@ a {
 	transition: 0.5s;
 	background-color: #7E72F2;
 	cursor: pointer;
-	
+	color: #fff;
 }
 
 
