--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,39 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
-/* put your styles in this file */
+.wrapper {
+	max-width: 990px;
+}
+
+.searchbox {
+	width: 100%;
+	display: flex;
+	background: #FFFFFF;
+	box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+	border-radius: 5px;
+}
+ 
+.searchbox-field {
+	width: 100%;
+	padding: 5px;
+	height: 45px;
+	border-radius: 5px 0 0 5px;
+	outline: none;
+	color: #2C2C2C;
+}
+
+
+
+.searchbox-button {
+	width: 100px;
+	height: 45px;
+	background: #fff;
+	text-align: center;
+	color: #2C2C2C;
+	font-size: 25px;
+	border-radius: 0 5px 5px 0;
+	cursor: pointer;
+	font-size: 20px;
+}
+
+
+
