online-store Volodymyr_Kostiuk filters-list

--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
 
   <style>
     .wrapper {
-      width: 400px;
+      width: 40rem;
       margin: 100px auto;
     }
   </style>
@@ -15,7 +15,12 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- FiltersList component -->
+    <div class="wrapper-serch">
+      <p class="wrapper-serch -text">Category</p>
+
+      <div><input type="checkbox"> <label>Cell phones</label></div>
+      <div><input type="checkbox" checked="checked"> <label>Cell phones</label></div>
+    </div>
   </div>
 </main>
 </body>
