online-store Volodymyr_Kostiuk search-box

--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <title>SearchBox component</title>
 
   <link rel="stylesheet" href="style.css">
@@ -16,7 +16,7 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- SearchBox component -->
+    <input type="text" placeholder="Serch">
   </div>
 </main>
 </body>
