double-slider and filter-list

--- a/online-store/src/src/components/card/01-css-task/style.css
+++ b/online-store/src/src/components/card/01-css-task/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 button {
-  background-color: #7E72F2;
+  background-color:#7e72f2 ;
   border: none;
   color: white;
   cursor: pointer;
