--- a/online-store/src/src/components/double-slider/01-css-task/index.html
+++ b/online-store/src/src/components/double-slider/01-css-task/index.html
@@ -16,7 +16,12 @@
 <body>
 <main>
   <div class="wrapper">
+    <div class="container">
     <!-- DoubleSlider component -->
+    <div class="slider-track"></div>
+    <input type="range" min="0" max="100" value="30" id="slider-1">
+    <input type="range" min="0" max="100" value="70" id="slider-2">
+    </div>
   </div>
 </main>
 </body>
