--- a/online-store/src/src/components/filters-list/01-css-task/index.html
+++ b/online-store/src/src/components/filters-list/01-css-task/index.html
@@ -13,10 +13,28 @@
   </style>
 </head>
 <body>
-<main>
+<div>
   <div class="wrapper">
     <!-- FiltersList component -->
-  </div>
+    <p class="category">Category</p>
+    <div class="check">
+      <div>
+
+        <label class="checkbox" for="Cell-phone">
+          <input type="checkbox" id="Cell-phone" name="Cell-phone" checked/>
+          <span>Cell phone</span>
+        </label>
+      </div>
+      <div>
+
+        <label class="checkbox" for="Computers&Tables">
+          <input type="checkbox" id="Computers&Tables" name="Computers&Tables" checked/>
+          <span>Computers&Tables</span>
+        </label>
+      </div>
+    </div>
+
+</div>
 </main>
 </body>
 </html>
