--- a/src/components/double-slider/01-css-task/index.html
+++ b/src/components/double-slider/01-css-task/index.html
@@ -16,7 +16,19 @@
 <main>
   <div class="wrapper">
     <!-- DoubleSlider component -->
+    <div class="form-group price-slider">
+      <h3 class="slider-tittle">Price</h3> 
+      <div class="slider-wrapper">
+        <span class="min-limit">0 UAH</span>
+        <div class="range-slider-inner">
+          <span class="range-slider-left"></span>
+          <span class="range-slider-space"></span>
+          <span class="range-slider-right"></span>
+        </div>
+        <span class="max-limit">100 000 UAH</span>
+      </div>      
+    </div>
   </div>
-</main>
+</main> 
 </body>
 </html>
