--- a/src/components/side-bar/01-css-task/index.html
+++ b/src/components/side-bar/01-css-task/index.html
@@ -16,6 +16,18 @@
 <main>
   <div class="wrapper">
     <!-- SideBar component -->
+    <div class="sidebar">
+      <div class="sidebar-content">
+
+        <span class="delimiter"></span>
+  
+        <span class="delimiter"></span>
+      
+      </div>
+      <div class="prodact-button-clear prodact-button-color">
+        <button class="prodact-button-add font-montserrat-400 prodact-button-color font-size-13">CLEAR ALL FILTERS</button>
+      </div>  
+    </div>
   </div>
 </main>
 </body>
