--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -2,21 +2,28 @@
 :root {
     --purpure-100:#7E72F2;
   }
+
 .cart-button{
     box-sizing: border-box;
     width:7.5rem;
     height: 2.25rem;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    font-size: 0.875rem;
+    border-radius: 3px;
+    background:var(--purpure-100) ;
+    outline: none;
+    border:none;
     display: flex;
     justify-content: center;
     align-items:center;
-    border-radius: 3px;
-    background:var(--purpure-100) ;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+}
+.cart-button-link{
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 0.875rem;
     color:white;
-    outline: none;
-    border:none;
+
 }
 .bi.bi-cart{
     font-size:0.9375rem;
@@ -25,3 +32,90 @@
     text-transform:uppercase;
     padding: 0 5px;
 }
+/* modal */
+.wrapper{
+    width:100%;
+    height:calc(100% - 80px);  
+}
+#cart-modal{
+    display: none;
+}
+.modal-cart{
+    width:100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top:0;
+    background: rgba(0, 0, 0, 0.4);
+    z-index:100;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+}
+.modal-cart-content{
+    background: #FEFEFE;
+    width: calc(100% - 80px);
+    height: calc(100% - 80px);
+    position: fixed;
+    z-index: 150;
+    overflow: scroll;
+    
+}
+.modal-close-header{
+    height: 40px;
+    width:100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+.modal-cart-list{
+    margin: 0;
+    padding: 0;
+}
+.modal-cart-row-list{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin:15px 10px;
+    box-shadow: 0 2px 8px rgb(0 0 0 / 15%);
+    border-radius: 8px;
+    padding: 15px;
+    box-sizing: border-box;
+
+}
+.modal-item-preview{
+    display: flex;
+    align-items: center;
+    width:3.5rem;
+    height: 2.5rem;
+}
+.modal-item-preview img{
+    width:100%;
+    height: auto;
+}
+.counter-btn{
+    width:30px;
+    height: 30px;
+    border:none;
+    background: #ffffff;
+}
+.modal-item-price{
+    min-width: 100px;
+    padding: 0 10px;
+}
+.cart-footer{
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items: center;
+}
+.total-cart{
+    margin: 10px;
+}
+.cart-button{
+    background: #7E72F2;
+    color:white;
+    text-transform: uppercase;
+  }
