--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
   <style>
@@ -16,6 +17,59 @@
 <main>
   <div class="wrapper">
     <!-- FiltersList component -->
+    <form class="form-filters-category form-group font-montserrat" action="#">
+      <h3 class="form-tittle">Category</h3>
+      <div>
+        <div class="filters-item">
+          <div class="form-checkbox-item">
+            <input type="checkbox" id="category-monitors">
+            <label for="category-monitors">Monitors</label>
+          </div>
+        </div>
+        <div class="filters-item">
+          <div class="form-checkbox-item">
+            <input type="checkbox" id="category-laptops">
+            <label for="category-laptops">Laptops</label>
+          </div>
+        </div>
+        <div class="filters-item">
+          <div class="form-checkbox-item">
+            <input type="checkbox" id="category-video-cards">
+            <label for="category-video-cards">Video cards</label>
+          </div>
+        </div>
+        <div class="filters-item">
+          <div class="form-checkbox-item">
+            <input type="checkbox" id="category-gaming-keyboards">
+            <label for="category-gaming-keyboards">Gaming keyboards</label>
+          </div>
+        </div>
+        <div class="filters-item">
+          <div class="form-checkbox-item">
+            <input type="checkbox" id="category-computer-mouse">
+            <label for="category-computer-mouse">Computer mouse</label>
+          </div>
+        </div>
+        <div class="filters-item">
+          <div class="form-checkbox-item">
+            <input type="checkbox" id="category-ssd">
+            <label for="category-ssd">SSD</label>
+          </div>
+        </div>
+        <div class="filters-item">
+          <div class="form-checkbox-item">
+            <input type="checkbox" id="category-sound-cards">
+            <label for="category-sound-cards">Sound cards</label>
+          </div>
+        </div>
+        <div class="filters-item">
+          <div class="form-checkbox-item">
+            <input type="checkbox" id="category-ram">
+            <label for="category-ram">RAM</label>
+          </div>
+        </div>
+      </div>
+    </form>
   </div>
 </main>
 </body>
