--- a/src/Components/Main/Card/Card.css
+++ b/src/Components/Main/Card/Card.css
@@ -9,17 +9,22 @@
     justify-content: space-between;
     flex-direction: column;
     margin-top: 20px;
+    overflow: hidden;
 }
 
 .card-img {
     max-width: 293px;
+    height: 200px;
+    position: relative;
     padding: 12px 12px 0 12px;
 }
 
-.card-img img {
-    max-width: 293px;
+.card-img img{
     width: 100%;
-}   
+    height: 100%;
+    object-fit: contain;
+    user-select: none;
+}
 
 .card-info {
     padding: 22px 24px 0 24px;
@@ -52,6 +57,8 @@
 
 .card-decs p{
     margin-bottom: 8px;
+    height: 4.5rem;
+    overflow: hidden;
 }
 
 .card-category span{
