--- a/src/Components/Main/MainContent.css
+++ b/src/Components/Main/MainContent.css
@@ -6,11 +6,24 @@
 .left-side {
     max-width: 280px;
     width: 100%;
-    height: 912px;
+    height: 100%;
 }
 
 .right-side {
     max-width: 990px;
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 992px) {
+    .left-side {
+        max-width: 220px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .left-side {
+        display: none;
+    }
 }
