--- a/src/Components/Main/Pagination.css
+++ b/src/Components/Main/Pagination.css
@@ -11,11 +11,13 @@
 }
 
 .wrapper-pagination {
-    width: 590px;
+    max-width: 590px;
+    width: 100%;
     min-height: 40px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 ._round-shape {
